// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/UINTEGER.proto";
import "./EncodedValue.proto";


package encode.protobuf;

message EncodedValuesList {
extensions 3 to 103;

  repeated encode.protobuf.EncodedValue encodedValues = 1;
  optional ccsds_mal.protobuf.UINTEGER largeSequenceCount = 2;
}
